no input/output on entry, doesn't seem like we actually use it anywhere
