# dockstore-webservice/src/main/resources/swagger.yaml
@@ -4726,8 +4726,12 @@ paths:
         required: false
         type: "string"
       responses:
-        default:
+        200:
           description: "successful operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Workflow"
       security:
       - BEARER: []
   /workflows/hostedEntry:
@@ -6408,24 +6412,12 @@ definitions:
         type: "integer"
         format: "int64"
         description: "Implementation specific ID for the container in this web service"
-      input_file_formats:
-        type: "array"
-        readOnly: true
-        uniqueItems: true
-        items:
-          $ref: "#/definitions/FileFormat"
       last_modified_date:
         type: "integer"
         format: "int64"
         readOnly: true
       licenseInformation:
         $ref: "#/definitions/LicenseInformation"
-      output_file_formats:
-        type: "array"
-        readOnly: true
-        uniqueItems: true
-        items:
-          $ref: "#/definitions/FileFormat"
       tags:
         type: "array"
         uniqueItems: true
@@ -6646,24 +6638,12 @@ definitions:
         type: "integer"
         format: "int64"
         description: "Implementation specific ID for the container in this web service"
-      input_file_formats:
-        type: "array"
-        readOnly: true
-        uniqueItems: true
-        items:
-          $ref: "#/definitions/FileFormat"
       last_modified_date:
         type: "integer"
         format: "int64"
         readOnly: true
       licenseInformation:
         $ref: "#/definitions/LicenseInformation"
-      output_file_formats:
-        type: "array"
-        readOnly: true
-        uniqueItems: true
-        items:
-          $ref: "#/definitions/FileFormat"
       topicId:
         type: "integer"
         format: "int64"
@@ -8220,12 +8200,6 @@ definitions:
         type: "integer"
         format: "int64"
         description: "Implementation specific ID for the container in this web service"
-      input_file_formats:
-        type: "array"
-        readOnly: true
-        uniqueItems: true
-        items:
-          $ref: "#/definitions/FileFormat"
       isChecker:
         type: "boolean"
       last_modified_date:
@@ -8234,12 +8208,6 @@ definitions:
         readOnly: true
       licenseInformation:
         $ref: "#/definitions/LicenseInformation"
-      output_file_formats:
-        type: "array"
-        readOnly: true
-        uniqueItems: true
-        items:
-          $ref: "#/definitions/FileFormat"
       parentEntry:
         $ref: "#/definitions/Entry"
       topicId:
